# maiap

2d-convex-hull/: compilation.txt  tp-convex.docx
2d-convex-hull/build-src-Desktop_Qt_5_9_1_clang_64bit-Défaut/: CMakeCache.txt  Makefile  cmake_install.cmake  convex  convex.cbp  ui_convex.h
2d-convex-hull/build-src-Desktop_Qt_5_9_1_clang_64bit-Défaut/convex_autogen/: mocs_compilation.cpp
2d-convex-hull/build-src-Desktop_Qt_5_9_1_clang_64bit-Défaut/convex_autogen/EWIEGA46WW/: moc_window.cpp
2d-convex-hull/src/: CMakeLists.txt  scene.h
2d-meshing/: courbe.csv  courbe_tracée.xlsx  readme.doc
2d-meshing/build-src-Desktop_Qt_5_9_1_clang_64bit-Défaut/: CMakeCache.txt  Makefile  cmake_install.cmake  refinement  refinement.cbp  ui_refinement.h
2d-meshing/build-src-Desktop_Qt_5_9_1_clang_64bit-Défaut/refinement_autogen/EWIEGA46WW/: moc_glviewer.cpp  moc_window.cpp
2d-meshing/data/: butterfly.edg  camel.edg  corsica.edg  elephant.edg  estonia.edg  flower.edg  france.edg  holes.edg  lines.edg  reims.edg  square-cut.edg  test_conforming00.edg  test_conforming01.edg  test_conforming02.edg  test_small_angles.edg
2d-meshing/src/: CMakeLists.txt  cdt.h  courbes.cpp  courbes.h  delaunay_parametre_variable.cpp  main.cpp  refinement.ui  scene.h  window.cpp  window.h
